Made changes to style and utc time

--- a/App.css
+++ b/App.css
@@ -1,21 +1,160 @@
 /* CSS styles here */
 
 
-header {
+@property --rotate {
+    syntax: "<angle>";
+    initial-value: 132deg;
+    inherits: false;
+  }
+  
+  :root {
+    --card-height: 65vh;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+  
+  body {
+    min-height: 100vh;
+    background: #212534;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    box-sizing: border-box;
+  }
+  
+  .card {
+    background: #191c29;
+    width: var(--card-width);
+    height: var(--card-height);
+    padding: 3px;
+    position: relative;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 20px;
-}
-
-header img {
-    border-radius: 10px 10px 10px 10px;
-    height: 500px;
-}
-
-main {
+    display: flex;
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
+  }
+  
+  .card .img-cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin: 20px;
-}
-
-p {
-    font-size: 18px;
-}
+  }
+  
+  .card .img-cont img {
+    width: 150px;
+    border-radius: 50%;
+    border: 3px solid #5ddcff;
+  }
+  
+  .card:hover {
+    transition: color 1s;
+  }
+  /* .card:hover:before,
+  .card:hover:after {
+    animation: none;
+    opacity: 0;
+  } */
+  
+  .card::before {
+    content: "";
+    width: 104%;
+    height: 102%;
+    border-radius: 8px;
+    background-image: linear-gradient(
+      var(--rotate),
+      #5ddcff,
+      #3c67e3 43%,
+      #4e00c2
+    );
+    position: absolute;
+    z-index: -1;
+    top: -1%;
+    left: -2%;
+    animation: spin 2.5s linear infinite;
+  }
+  
+  .card::after {
+    position: absolute;
+    content: "";
+    top: calc(var(--card-height) / 6);
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale(0.8);
+    filter: blur(calc(var(--card-height) / 6));
+    background-image: linear-gradient(
+      var(--rotate),
+      #5ddcff,
+      #3c67e3 43%,
+      #4e00c2
+    );
+    opacity: 1;
+    transition: opacity 0.5s;
+    animation: spin 2.5s linear infinite;
+  }
+  
+  .card .info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .card .info h2 {
+    color: #ccc;
+    font-size: 20px;
+    margin-top: 40px;
+  }
+  
+  .card .info .track-cont {
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 0px auto;
+  }
+  
+  .card .info .track-cont span {
+    font-size: 12px;
+    color: #ccc;
+  }
+  
+  .card .info .track-cont a {
+    width: 0px;
+    font-size: 12px;
+    color: #ccc;
+    text-decoration: underline;
+  }
+  
+  .card .info .date {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  
+  .card .info .date span {
+    font-size: 14px;
+    color: #ccc;
+  }
+  
+  @keyframes spin {
+    0% {
+      --rotate: 0deg;
+    }
+    100% {
+      --rotate: 360deg;
+    }
+  }
